--- a/src/pages/AboutMePage/AboutMePage.css
+++ b/src/pages/AboutMePage/AboutMePage.css
@@ -35,6 +35,7 @@
 
   .content {
     margin-left: 5rem;
+    margin-bottom: 0;
     width: 100%;
     animation: fadeIn 1s ease-in forwards;
   }
@@ -58,6 +59,7 @@
 
     .content {
         margin-left: 0;
+        margin-bottom: 5rem;
     }
   }
   
